[gd_scene load_steps=9 format=3 uid="uid://dwcrlgrxpc5qs"]

[ext_resource type="Script" path="res://Entities/ResizableBox/big_box.gd" id="1_dh5yu"]
[ext_resource type="Texture2D" uid="uid://7jxpgws33mca" path="res://Entities/ResizableBox/bigbox.png" id="1_nrwon"]
[ext_resource type="Script" path="res://Entities/HitBox/damage_dealer_area.gd" id="3_588i6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy8vj"]
size = Vector2(30, 30)

[sub_resource type="Animation" id="Animation_a7a8y"]
length = 0.001

[sub_resource type="Animation" id="Animation_urcwu"]
resource_name = "start"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_growth"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_moels"]
_data = {
"RESET": SubResource("Animation_a7a8y"),
"start": SubResource("Animation_urcwu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8yln"]
size = Vector2(18, 5.5)

[node name="BigBox" type="RigidBody2D" groups=["shrinkable"]]
position = Vector2(0, -16)
collision_layer = 4
collision_mask = 519
mass = 100.0
continuous_cd = 2
lock_rotation = true
script = ExtResource("1_dh5yu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nrwon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xy8vj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
libraries = {
"": SubResource("AnimationLibrary_moels")
}

[node name="RaycastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)

[node name="RaycastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="RaycastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)

[node name="RaycastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="DamageDealerArea" type="Area2D" parent="."]
collision_layer = 320
collision_mask = 320
script = ExtResource("3_588i6")
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDealerArea"]
position = Vector2(0, 14.75)
shape = SubResource("RectangleShape2D_p8yln")
